add correction hw8-1

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </ul>
       </div>
     </header>
-    <main>
+    <!-- <main>
       <section class="hero img">
         <div class="container hero-box">
           <h1 class="hero-box__title">Ефективні рішення для вашого бізнесу</h1>
@@ -707,5 +707,7 @@
       </div>
     </div>
     <script src="./js/modal.js"></script>
+  </body>
+</html> -->
   </body>
 </html>
