--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
-     <header class="page-header">
+    <header class="page-header">
       <div class="container page-header">
         <nav class="page-navigation">
           <div class="logo">
@@ -27,12 +27,12 @@
           </div>
           <ul class="menu">
             <li class="menu__item">
-              <a class="link menu__link" href="./index.html"
-                >Студія</a
-              >
+              <a class="link menu__link" href="./index.html">Студія</a>
             </li>
             <li class="menu__item">
-              <a class="link menu__link current-portfolio" href="portfolio.html">Портфоліо</a>
+              <a class="link menu__link current-portfolio" href="portfolio.html"
+                >Портфоліо</a
+              >
             </li>
             <li class="menu__item">
               <a class="link menu__link" href="#">Контакти</a>
@@ -69,7 +69,7 @@
         </ul>
       </div>
     </header>
-    <main>
+    <!-- <main>
       <section class="section">
         <div class="container hero-portfolio">
           <h1 class="visually-hidden">Portfolio</h1>
@@ -342,5 +342,7 @@
       </div>
       </div>
     </footer>
+  </body>
+</html> -->
   </body>
 </html>
