add correct hm 8-2

--- a/portfolio.html
+++ b/portfolio.html
@@ -69,7 +69,7 @@
         </ul>
       </div>
     </header>
-    <!-- <main>
+    <main>
       <section class="section">
         <div class="container hero-portfolio">
           <h1 class="visually-hidden">Portfolio</h1>
@@ -343,6 +343,6 @@
       </div>
     </footer>
   </body>
-</html> -->
+</html>
   </body>
 </html>
