--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <header class="page-header">
-      <div class="container page-header">
+      <div class="container page-header__container">
         <nav class="page-navigation">
           <div class="logo">
             <a href="./index.html" class="logo__link" lang="en"
@@ -39,6 +39,11 @@
             </li>
           </ul>
         </nav>
+        <button type="button" class="open-mobile-menu-btn">
+          <svg class="open-mobile-menu-btn-icon">
+            <use href="./images/symbol-defs2.svg#icon-burger"></use>
+          </svg>
+        </button>
         <ul class="header-contact">
           <li class="header__list">
             <a class="link header__link" href="mailto:info@devstudio.com">
@@ -67,6 +72,9 @@
             >
           </li>
         </ul>
+      </div>
+      <div class="mobil-menu">
+        <div class="container"></div>
       </div>
     </header>
     <!-- <main>
