--- a/index.html
+++ b/index.html
@@ -73,62 +73,64 @@
           </li>
         </ul>
       </div>
-      <div class="mobile-menu js-menu-container">
-        <div class="container mobile-menu__container">
-          <button class="mobile-menu__close-btn js-close-menu">
-            <svg class="mobile-menu__close-icon">
-              <use href="./images/symbol-defs2.svg#icon-close-mobile"></use>
-            </svg>
-          </button>
-          <ul class="menu-mobile">
-            <li class="menu-mobile__item">
+    </header>
+    <div class="mobile-menu js-menu-container">
+      <div class="container mobile-menu__container">
+        <button class="mobile-menu__close-btn js-close-menu">
+          <svg class="mobile-menu__close-icon">
+            <use href="./images/symbol-defs2.svg#icon-close-mobile"></use>
+          </svg>
+        </button>
+        <nav class="mobile-menu-nav">
+          <ul class="mobile-menu-nav__container">
+            <li class="mobile-menu-nav__list">
               <a
-                class="link menu-mobile__link current-studio"
+                class="link mobile-menu-nav__link mobile-menu-nav__link_current-studio"
                 href="./index.html"
                 >Студія</a
               >
             </li>
-            <li class="menu-mobile__item">
-              <a class="link menu-mobile__link" href="portfolio.html"
+            <li class="mobile-menu-nav__list">
+              <a class="link mobile-menu-nav__link" href="portfolio.html"
                 >Портфоліо</a
               >
             </li>
-            <li class="menu-mobile__item">
-              <a class="link menu-mobile__link" href="#">Контакти</a>
+            <li class="mobile-menu-nav__list">
+              <a class="link mobile-menu-nav__link" href="#">Контакти</a>
             </li>
           </ul>
-          <ul class="menu-mobile__contact">
-            <li class="menu-mobile__list">
-              <a
-                class="link menu-mobile__link"
-                href="mailto:info@devstudio.com"
-              >
-                info@devstudio.com</a
-              >
-            </li>
-            <li class="menu-mobile__list">
-              <a class="link menu-mobile__link" href="tel:380961111111">
-                +38 096 111 11 11</a
-              >
-            </li>
-          </ul>
-          <ul class="menu-mobile__social">
-            <li class="menu-mobile__social-list">
-              <a class="menu-mobile__social_link" href="Instagram">Instagram</a>
-            </li>
-            <li class="menu-mobile__social-list">
-              <a class="menu-mobile__social_link" href="Twitter">Twitter</a>
-            </li>
-            <li class="menu-mobile__social-list">
-              <a class="menu-mobile__social_link" href="Facebook">Facebook</a>
-            </li>
-            <li class="menu-mobile__social-list">
-              <a class="menu-mobile__social_link" href="LinkedIn">LinkedIn</a>
-            </li>
-          </ul>
-        </div>
+        </nav>
+        <ul class="menu-mobile-contact">
+          <li class="menu-mobile__list">
+            <a class="link menu-mobile-contact__tell" href="tel:380961111111">
+              +38 096 111 11 11</a
+            >
+          </li>
+          <li class="menu-mobile__list">
+            <a
+              class="link menu-mobile-contact__email"
+              href="mailto:info@devstudio.com"
+            >
+              info@devstudio.com</a
+            >
+          </li>
+        </ul>
+        <ul class="menu-mobile-social">
+          <li class="menu-mobile-social__list">
+            <a class="menu-mobile-social__link" href="">Instagram</a>
+          </li>
+          <li class="menu-mobile-social__list">
+            <a class="menu-mobile-social__link" href="">Twitter</a>
+          </li>
+          <li class="menu-mobile-social__list">
+            <a class="menu-mobile-social__link" href="">Facebook</a>
+          </li>
+          <li class="menu-mobile-social__list">
+            <a class="menu-mobile-social__link" href="">LinkedIn</a>
+          </li>
+        </ul>
       </div>
-    </header>
+    </div>
     <!-- <main>
       <section class="hero img">
         <div class="container hero-box">
