--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           </svg>
         </button>
         <ul class="header-contact">
-          <li class="header__list">
+          <li class="header__list_width-email">
             <a class="link header__link" href="mailto:info@devstudio.com">
               <svg
                 aria-label="іконка пошти"
@@ -57,7 +57,7 @@
               >info@devstudio.com</a
             >
           </li>
-          <li class="header__list">
+          <li class="header__list_width-tell">
             <a class="link header__link" href="tel:380961111111">
               <svg
                 aria-label="іконка телефону"
