--- a/portfolio.html
+++ b/portfolio.html
@@ -92,14 +92,14 @@
         <nav class="mobile-menu-nav">
           <ul class="mobile-menu-nav__container">
             <li class="list">
-              <a
-                class="mobile-menu-nav__link mobile-menu-nav__link_current link"
-                href="./index.html"
+              <a class="mobile-menu-nav__link link" href="./index.html"
                 >Студія</a
               >
             </li>
             <li class="list">
-              <a class="mobile-menu-nav__link link" href="./portfolio.html"
+              <a
+                class="mobile-menu-nav__link mobile-menu-nav__link_current link"
+                href="./portfolio.html"
                 >Портфоліо</a
               >
             </li>
