corected img-hw 8

--- a/index.html
+++ b/index.html
@@ -262,10 +262,8 @@
             <li class="team__list-item">
               <picture>
                 <source
-                  srcset="
-                    ./images/images1/desktop/igor.jpg    1x,
-                    ./images/images1/desktop/igor@2x.jpg 2x
-                  "
+                  srcset="./images/img4 1x,
+                  ./images/images1/desktop/igor.jpg 2x"
                   media="(min-width:1200px)"
                 />
                 <source
@@ -352,8 +350,8 @@
               <picture>
                 <source
                   srcset="
-                    ./images/images1/desktop/olga.jpg    1x,
-                    ./images/images1/desktop/olga@2x.jpg 2x
+                    ./images/img5 1x,
+                    ./images/images1/desktop/olga.jpg 2x
                   "
                   media="(min-width:1200px)"
                 />
@@ -432,8 +430,8 @@
               <picture>
                 <source
                   srcset="
-                    ./images/images1/desktop/nikola.jpg    1x,
-                    ./images/images1/desktop/nikola@2x.jpg 2x
+                    ./images/img6    1x,
+                    ./images/images1/desktop/nikola.jpg 2x
                   "
                   media="(min-width:1200px)"
                 />
@@ -515,8 +513,8 @@
               <picture>
                 <source
                   srcset="
-                    ./images/images1/desktop/mihail.jpg    1x,
-                    ./images/images1/desktop/mihail@2x.jpg 2x
+                    ./images/img7    1x,
+                    ./images/images1/desktop/mihail.jpg 2x
                   "
                   media="(min-width:1200px)"
                 />
