corected img and svg hw8

--- a/index.html
+++ b/index.html
@@ -262,8 +262,9 @@
             <li class="team__list-item">
               <picture>
                 <source
-                  srcset="./images/img4 1x,
-                  ./images/images1/desktop/igor.jpg 2x"
+                  srcset="
+                  ./images/images1/desktop/igor1.jpg 1x,
+                  ./images/images1/desktop/igor@2x 2x"
                   media="(min-width:1200px)"
                 />
                 <source
@@ -350,8 +351,8 @@
               <picture>
                 <source
                   srcset="
-                    ./images/img5 1x,
-                    ./images/images1/desktop/olga.jpg 2x
+                    ./images/images1/desktop/olga1.jpg 1x,
+                    ./images/images1/desktop/olga@2x.jpg 2x
                   "
                   media="(min-width:1200px)"
                 />
@@ -430,21 +431,21 @@
               <picture>
                 <source
                   srcset="
-                    ./images/img6    1x,
-                    ./images/images1/desktop/nikola.jpg 2x
+                    ./images/images1/desktop/nikola1.jpg 1x,
+                    ./images/images1/desktop/nikola@2x 2x
                   "
                   media="(min-width:1200px)"
                 />
                 <source
                   srcset="
-                    ./images/images1/tablet/nikola.jpg    1x,
+                    ./images/images1/tablet/nikola.jpg 1x,
                     ./images/images1/tablet/nikola@2x.jpg 2x
                   "
                   media="(min-width:768px)"
                 />
                 <source
                   srcset="
-                    ./images/images1/mobil/nikola.jpg    1x,
+                    ./images/images1/mobil/nikola.jpg 1x,
                     ./images/images1/mobil/nikola@2x.jpg 2x
                   "
                   media="(max-width:767px)"
@@ -513,8 +514,8 @@
               <picture>
                 <source
                   srcset="
-                    ./images/img7    1x,
-                    ./images/images1/desktop/mihail.jpg 2x
+                    ./images/images1/desktop/mihail1.jpg 1x,
+                    ./images/images1/desktop/mihail@2x.jpg 2x
                   "
                   media="(min-width:1200px)"
                 />
